--- a/skt-templates/css/templaters.css
+++ b/skt-templates/css/templaters.css
@@ -5165,3 +5165,205 @@ height:90px; background:url(https://demosktthemes.com/free/garden-care-lite/wp-c
 .skt-roofing-services-section-thirteen-small-hug-img-col:after{content:""; background:#0b1424; position:absolute; width:110px; height:83px; bottom:-64px; z-index:1; right:22px;}
 }
 /* SKT Roofing */
+
+/* SKT Decor */
+.skt-decor-counter .elementor-counter-title{text-align:center !important;}
+.skt-decor-counter .elementor-counter-number-suffix {font-size:37px; background: #282828; width:50px !important; height:50px !important; border-radius:100%; text-align:center !important; align-content:center; position: absolute; right:5px; top:-10px;}
+.skt-decor-counter .elementor-counter-number-prefix:empty{display:none;}
+.skt-decor-counter .elementor-counter-number{ width:100%;}
+.skt-decor-work-bar .elementor-progress-wrapper {overflow:visible !important; height:2px !important; margin-top:15px;}
+.skt-decor-work-bar .elementor-progress-percentage{position:absolute; right:0; top:-35px; padding-right:0px;}
+.skt-decor-work-bar .elementor-progress-bar{border-radius: 0; position:relative; top:-4px;}
+.skt-decor-work-sec .e-con-inner{ position:relative;}
+.skt-decor-work-sec .e-con-inner::after {content:''; width:75%; height: 78%; position: absolute; right: 0px; top: 0; background:#f7f7f7;border-bottom-right-radius: 25px;}
+.skt-decor-process-box .elementor-image-box-img {width:150px !important; height: 150px; background:#fff; border-radius:100%; justify-content:center; align-content:center; margin:0 auto 40px !important;}
+.skt-decor-process-number{position:absolute !important; top:0; left:25%; z-index:99;}
+.skt-decor-process-box p{width:90%; margin:0 auto !important;}
+.skt-decor-process-box::after {content:''; background:url(https://demosktthemes.com/free/decor/wp-content/uploads/2025/02/process-wave.png) no-repeat; width:135px; height:29px; position:absolute; right:-77px; top:25%; transform:translateY(-50%); background-size:100%;}
+.skt-decor-process-box-last:after{display:none;}
+.skt-decor-sec2-left { position:relative;}
+.skt-decor-sec2-left .elementor-custom-embed-image-overlay{width: 130px;height: 130px;border-radius: 100%;background: #fff;align-items: center !important;display: flex !important;justify-content: center !important;box-shadow: 0px 0px 90px 0px rgba(0, 0, 0, 0.1);}
+.skt-decor-sec2-left .elementor-custom-embed-image-overlay img {width: 28px !important;height: 36px;}
+.skt-decor-sec2-right-iconbox .elementor-widget-image .elementor-widget-container {width: 154px !important;height: 154px !important; margin: 0 auto;border-radius: 100%;}
+.skt-decor-sec2-right-iconbox .elementor-widget-image .elementor-widget-container img { margin-top:40px;}
+.skt-decor-sec2-left-video {width: auto !important;position: absolute !important;top: 60%;right: -120px;transform: translateY(-50%);}
+.skt-decor-sec2-left-video .elementor-open-lightbox { padding:50px;}
+.skt-decor-sec2-left::after {content: '';position: absolute;right: -100px;bottom: 6px;width: 0;height: 0;border-top: 174px solid #1c130e;border-right: 100px solid transparent;}
+.skt-decor-sec4-left-inner-right-counter .elementor-counter {width: 118px !important;height: 118px !important;background: #ff8a00;    border-radius: 100%;border: 10px solid #fff;outline: 1px solid #ff8a00;}
+.skt-decor-sec4-right-small-img {position: absolute !important;bottom: 0px;left: 30px;}
+.skt-decor-sec4-right-small-img::after {content: '';clip-path: polygon(50% 0%, 0% 50%, 50% 100%);background: #1c130e;width: 95px;    height: 95px;position: absolute;right: -90px;bottom: -15px;transform: rotate(45deg);}
+.skt-decor-sec4-right-small-img .elementor-widget-container {box-shadow: 52px -49px 89px -49px rgba(0,0,0,1);}
+.skt-decor-sec4-right-small-img::before {content: '';clip-path: polygon(50% 0%, 0% 50%, 50% 100%);background: #f2f1f1;width: 120px;    height: 120px;position: absolute;left: -17px;top: -102px;transform: rotate(-135deg);}
+.skt-decor-sec5-after-before .twentytwenty-after-label, .skt-decor-sec5-after-before .twentytwenty-before-label { opacity:1 !important;}
+.skt-decor-sec5-after-before .twentytwenty-after-label, .skt-decor-sec5-after-before .twentytwenty-before-label { display:none;}
+.skt-decor-sec5-after-before .twentytwenty-left-arrow::before {content:'After'; position:absolute;left: 110px !important;top: -190px !important;font-family:"Oswald", Sans-serif;font-weight:500; font-size:102px; text-transform:uppercase; background-color:transparent;text-shadow: 0px 6px #00000030;letter-spacing: 2px;color:#ffffff;}
+.skt-decor-sec5-after-before .twentytwenty-right-arrow::after {content:'Before'; position:absolute;right: 110px !important;top: -190px !important;font-family:"Oswald", Sans-serif;font-weight:500; font-size:102px; text-transform:uppercase;background-color:transparent;text-shadow: 0px 6px #00000030;letter-spacing: 2px; color:#ffffff;}
+.skt-decor-sec5-after-before .twentytwenty-container { margin:0 auto;}
+.skt-decor-sec9-tab .e-n-tabs-heading { margin-right:50px; padding-top:40px;}
+.skt-decor-sec9-tab .e-n-tabs-content { margin-top:-220px;}
+.skt-decor-sec9-tab button:hover { cursor:pointer;}
+.skt-decor-sec2-left-img .elementor-widget-container img {height: 937px;object-fit: cover;}
+.skt-decor-services-inner-services .services-box-content {box-shadow: 0px 0px 90px 0px rgba(0, 0, 0, 0.09);}
+.skt-decor-inner-projects-all-projects .projects-iteam { width:25% !important;}
+.skt-decor-inner-projects-all-projects .projects-image a img {height: 370px;object-fit: cover;}
+.skt-decor-inner-projects-all-projects .projects-content { left:30px !important;bottom: 30px !important;}
+.skt-decor-projects-details-list .elementor-icon-list-text span { float:right; width:40%;}
+.skt-decor-projects-details-list .elementor-icon-list-text { float:left; width:100%;}
+.skt-decor-projects-details-list .elementor-icon-list-item { border-bottom:1px solid #ffaa4f;}
+.skt-decor-projects-details-list .elementor-icon-list-item:last-child { padding-bottom:15px !important;}
+.skt-decor-projects-details-slider .swiper-pagination{ bottom:-40px !important;}
+
+@media (max-width: 1199px){
+.skt-decor-process-box::after {width:85px; right: -50px;}
+.skt-decor-process-number{left:15%;}
+.skt-decor-process-box p {width:100%;}
+.skt-decor-process-box .elementor-image-box-img{ margin-bottom:25px !important;}
+}
+
+@media(max-width: 1023px){
+.skt-decor-counter .elementor-counter-number-suffix {font-size: 34px; width:40px !important; height:40px !important; right:0px; top:-20px;}
+.skt-decor-work-image-box{min-height:100px !important;}
+.skt-decor-process-box p {width:100%;}
+.skt-decor-process-number{ left:5%;}
+.skt-decor-process-box::after {width:85px; right: -77px;}
+}
+
+@media(min-width: 1024px) and (max-width: 1199px){
+.skt-decor-sec2-right-inner, .skt-decor-sec2-right-inner2 {--width: 100% !important;}
+.skt-decor-sec2-mid {--width: 3% !important;}
+.skt-decor-sec2-right {--width: 74% !important;}
+.skt-decor-sec2-right-inner { margin-top:20px !important;}
+.skt-decor-sec2-right-inner2 { margin-top:20px !important;}
+.skt-decor-sec2-right-iconbox {--padding-left: 50px !important;--padding-right: 50px !important;}
+.skt-decor-sec2-right-inner-right-inner-right .elementor-widget-button .elementor-button {padding: 20px 20px 20px 20px !important;}
+.skt-decor-sec2-right-inner-right-inner-left .elementor-widget-button .elementor-button {padding: 20px 29px 20px 29px !important;}
+.skt-decor-sec2-left-img .elementor-widget-container img {height: 850px;object-fit: cover;}
+.skt-decor-sec2-left-video {left: 50%;transform: translate(-50%,-50%);right: auto; top:50%;}
+.skt-decor-sec4-left {--width: 50% !important;}
+.skt-decor-sec4-mid {--width: 3% !important;}
+.skt-decor-sec4-left-inner-left-list .elementor-icon-list-text { white-space:nowrap;}
+.skt-decor-sec4-left-inner-left {--width: 42% !important; padding-left:0 !important;}
+.skt-decor-sec4-left-inner-right {--width: 58% !important;}
+.skt-decor-sec4-right-small-img {bottom: -70px;left: -20px;}
+.skt-decor-sec4-right-big-img .elementor-widget-container img { width: 87.8% !important;}
+.skt-decor-sec5 { padding-top: 110px;padding-bottom: 50px;}
+.skt-decor-sec8-first-inner-left {--width: 35% !important}
+.skt-decor-sec8-first-inner-right {--width: 65% !important;}
+.skt-decor-sec8-first-inner-left  .elementor-heading-title { text-align:left !important;}
+.skt-decor-sec9-tab .e-n-tabs-content { margin-top:-140px !important;}
+.skt-decor-sec5-after-before .twentytwenty-left-arrow::before, .skt-decor-sec5-after-before .twentytwenty-right-arrow::after { top:-150px !important;}
+.skt-decor-sec7-btn .elementor-widget-container { margin-top:40px !important;}
+.skt-decor-sec8-first-inner-left-ttile2 .elementor-heading-title { font-size:40px !important;}
+.skt-decor-sec9-tab .e-n-tabs-heading {padding-top: 17px !important;}
+.skt-decor-sec9-tab button { background-color:#F5F5F5 !important;}
+.skt-decor-sec9-tab .e-n-tab-title[aria-selected="true"] {background: #FF8A00 !important;}
+.skt-decor-sec9-tab button:hover { background: #FF8A00 !important;}
+.skt-decor-sec10 .e-con-inner:nth-child(1) { padding-top:120px !important;}
+.skt-decor-sec10-first .e-con-inner:nth-child(1) { padding-top:0px !important;}
+.skt-decor-sec1-left {--width: 70% !important;}
+.skt-decor-sec1-right {--width: 30% !important;}
+.skt-decor-inner-projects-all-projects .projects-content h3 { padding-right:30px !important;}
+.skt-decor-projects-detailssec2 {--margin-top: -310px !important;}
+}
+
+@media(min-width: 768px) and (max-width: 1023px){
+.skt-decor-sec2 {--display: inherit !important;}
+.skt-decor-sec2-left {--width: 100% !important; margin:0 !important;}
+.skt-decor-sec2-left::after { display:none !important;}
+.skt-decor-sec2-mid {--width: 100% !important;}
+.skt-decor-sec2-right {--width: 100% !important;}
+.skt-decor-sec2-right-inner, .skt-decor-sec2-right-inner2 { width:100% !important;}
+.skt-decor-sec9-tab .e-n-tabs-heading {margin-right: 30px;padding-top: 15px;}
+.skt-decor-sec4-mid { width:5% !important;}
+.skt-decor-sec4-left { width:51% !important;}
+.skt-decor-sec4-right { width:44% !important;}
+.skt-decor-sec4-left-inner-left, .skt-decor-sec4-left-inner-right { width:100% !important;}
+.skt-decor-sec4-right-small-img .elementor-widget-container { box-shadow:none !important;}
+.skt-decor-sec4-right-small-img::before, .skt-decor-sec4-right-small-img::after { display:none !important;}
+.skt-decor-sec4-right-small-img { position:relative !important; left:0 !important; right:0 !important; top:40px;}
+.skt-decor-sec4-left-inner { margin-top:0 !important;}
+.skt-decor-sec5-after-before .twentytwenty-left-arrow::before {left: 120px !important;top: -100px !important;font-size: 72px;}
+.skt-decor-sec5-after-before .twentytwenty-right-arrow::after {right: 90px !important;top: -100px !important;font-size: 72px;}
+.skt-decor-sec4-left-inner-right-inner1 {width: 49% !important;display: inline-block !important;text-align: center !important;}
+.skt-decor-sec4-left-inner-right-inner2 {width: 49% !important;display: inline-block !important;text-align: center !important;}
+.skt-decor-sec4-left-inner-right {--display: block !important;}
+.skt-decor-sec4-left-inner-right-counter { margin:0 auto !important;}
+.skt-decor-sec4-left-inner-right-right{border-width: 0px 0px 0px 0px !important;}
+.slider-social-area .social-icons { top:32% !important;}
+.slider-social-area .social-icons a {width: 35px;height: 25px;line-height: 16px;}
+.skt-decor-sec2-left-img .elementor-widget-container img {height: 547px !important;}
+.skt-decor-sec9-tab button { background-color:#F5F5F5 !important;}
+.skt-decor-sec9-tab .e-n-tab-title[aria-selected="true"] {background: #FF8A00 !important;}
+.skt-decor-sec9-tab button:hover { background: #FF8A00 !important;}
+.skt-decor-sec10 .e-con-inner:nth-child(1) { padding-top:120px !important;}
+.skt-decor-sec10-first .e-con-inner:nth-child(1) { padding-top:0px !important;}
+.skt-decor-work-sec .e-con-inner::after { height:87% !important;}
+.skt-decor-inner-projects-all-projects .projects-iteam { width:50% !important; margin-bottom:30px;}
+.skt-decor-projects-detailssec2-right { width:100% !important;--padding-left: 60px !important;--padding-right: 60px !important; margin-top:30px !important;}
+.skt-decor-projects-detailssec2-left { display:none !important;}
+.skt-decor-projects-details-slider .swiper-pagination { bottom:-10px !important;}
+}
+
+
+@media(max-width: 767px){
+.skt-decor-counter .elementor-counter-number-wrapper{width:230px; margin:0 auto; position:relative;}
+.skt-decor-counter .elementor-counter-number-suffix{width:50px !important; height:50px !important; right:10px;}
+.skt-decor-work-image-box {width:120px !important; height:120px !important; margin:0 auto !important;}
+.skt-decor-work-sec .e-con-inner::after {width:110%; height:40%; right:-5%; bottom:0; top:auto;}	
+.skt-decor-process-box::after{display:none;}
+.skt-decor-process-box .elementor-image-box-img{ margin-bottom:25px !important;}
+.skt-decor-process-box::after {width:154px;}
+.skt-decor-sec2-left-video {left: 50%;transform: translate(-50%,-50%);right: auto; top:50%;}
+.skt-decor-sec2-left-img .elementor-widget-container img { width:auto !important;}
+}
+
+@media(min-width: 480px) and (max-width: 767px){
+.skt-decor-sec14-logo-img {width: 50% !important;}
+.skt-decor-sec14-logo-img:last-child {width: 100% !important;}
+.skt-decor-sec14-logo-img:nth-child(1), .skt-decor-sec14-logo-img:nth-child(3) { border-right:1px solid #EEEEEE;}
+.skt-decor-sec4-right-small-img::before, .skt-decor-sec4-right-small-img::after { display:none;}
+.skt-decor-sec4-right-small-img { position:relative !important; left:0 !important;}
+.skt-decor-sec4-right-small-img .elementor-widget-container { box-shadow:none;}
+.skt-decor-sec4-left-inner-right-counter { margin:0 auto;}
+.skt-decor-process-number{left:35%;}
+.skt-decor-sec2-right-inner-right-inner-left, .skt-decor-sec2-right-inner-right-inner-right {width: 47.7% !important;display: inline-block !important;}
+.skt-decor-sec9-tab button { background-color:#F5F5F5 !important;}
+.skt-decor-sec9-tab .e-n-tab-title[aria-selected="true"] {background: #FF8A00 !important;}
+.skt-decor-sec9-tab button:hover { background: #FF8A00 !important;}
+.skt-decor-sec2-left::after { display:none;}
+.skt-decor-sec5-after-before .twentytwenty-right-arrow::after {font-size: 30px !important;right: 65px !important;top: -65px !important;}
+.skt-decor-sec5-after-before .twentytwenty-left-arrow::before {font-size: 30px !important;left: 65px !important;top: -65px !important;}
+.skt-decor-sec9-tab button { background-color:#F5F5F5 !important;}
+.skt-decor-sec9-tab .e-n-tab-title[aria-selected="true"] {background: #FF8A00 !important;}
+.skt-decor-sec9-tab button:hover { background: #FF8A00 !important;}
+.skt-decor-sec2-left-img .elementor-widget-container img {height: 557px !important; width:100% !important;}
+.skt-decor-inner-projects-all-projects .projects-iteam { width:50% !important; margin-bottom:30px !important;}
+.skt-decor-inner-projects-all-projects .projects-content h3 { padding-right:15px !important;}
+.skt-decor-projects-details-slider .swiper-pagination { bottom:-20px !important;}
+}
+
+@media(max-width: 575px){
+.skt-decor-choose-sec::after{ display:none;}
+.skt-decor-work-sec .e-con-inner::after {height:32.5%; bottom:7.5%;}
+.skt-decor-sec2-left-img .elementor-widget-container img { height:450px !important; width:100% !important;}
+}
+
+@media(max-width: 479px){
+.skt-decor-sec4-left-inner-right-counter { margin:0 auto;}
+.skt-decor-sec4-right-small-img::before, .skt-decor-sec4-right-small-img::after { display:none;}
+.skt-decor-sec4-right-small-img { position:relative !important; left:0 !important;}
+.skt-decor-sec4-right-small-img .elementor-widget-container { box-shadow:none;}
+.skt-decor-sec5-after-before .twentytwenty-horizontal .twentytwenty-after-label::before, .skt-decor-sec5-after-before .twentytwenty-horizontal .twentytwenty-before-label::before { font-size:26px;}
+.skt-decor-process-number{left:32%;}
+.skt-decor-sec2-left::after {display:none;}
+.skt-decor-sec5-after-before .twentytwenty-right-arrow::after {font-size: 30px !important;right: 65px !important;top: -65px !important;}
+.skt-decor-sec5-after-before .twentytwenty-left-arrow::before {font-size: 30px !important;left: 65px !important;top: -65px !important;}
+.skt-home-posts-row .skt-home-posts-column:last-child .skt-home-posts-thumb img, .skt-home-posts-row .skt-home-posts-column:last-child .skt-home-posts-thumb, .skt-home-posts-row .skt-home-posts-column:last-child { border-radius:0 !important;}
+.skt-decor-sec9-tab button { background-color:#F5F5F5 !important;}
+.skt-decor-sec9-tab .e-n-tab-title[aria-selected="true"] {background: #FF8A00 !important;}
+.skt-decor-sec9-tab button:hover { background: #FF8A00 !important;}
+.skt-decor-sec2-left-img .elementor-widget-container img { height:450px !important; width:100% !important;}
+.skt-decor-inner-projects-all-projects .projects-iteam { width:100% !important; margin-bottom:30px !important;} 
+.skt-decor-projects-details-slider .swiper-pagination { bottom:-10px !important;}
+}
+/* SKT Decor */
